# rak4

./: .gitignore  ADK_REFERENCE.md  README.md  newThemeColors.md  sb  sf
back end/: .env.example  README.md  pyproject.toml
back end/app/: agent.py  booking_state.py  config.py  doctor_repository.py  doctor_tools.py  live_bridge.py  logging_config.py  main.py  patient_profile_models.py  patient_profile_repository.py  patient_profile_service.py  patient_tools.py  schedule_api.py  schedule_models.py  schedule_repository.py  schedule_service.py  schedule_tools.py
back end/app/data/: mock_doctors.json  patient_profiles.sql  schedules.sql
back end/tests/: test_booking_state.py  test_config.py  test_doctor_repository.py  test_guardrails.py  test_live_bridge_ptt.py  test_live_bridge_tool_events.py  test_patient_profile_repository.py  test_patient_profile_service.py  test_schedule_api.py  test_schedule_repository.py  test_schedule_service.py  test_schedule_tools.py  test_tool_contracts.py
front end/: .env.example  index.html  package.json
front end/src/: App.tsx  styles.css
front end/src/components/: BookingUpdates.tsx  DoctorRecommendations.tsx  StatusPanel.tsx  TranscriptPanel.tsx
front end/src/lib/: audioIn.ts  audioOut.ts  liveSocket.ts  scheduleApi.ts
front end/src/lib/worklets/: assistantPlaybackProcessor.js  micCaptureProcessor.js
front end/src/pages/: SchedulePage.tsx
